<resources>
    <string name="app_name" translatable="false">NMedia</string>
    <string name="post_name">Netology. Internet-professions university</string>
    <string name="text">Hi, this is new Netology! Once, Netology started from online-marketing intensives. Then design, development, analytics and management courses were created. We grow ourselves and help our students to grow from rookies to confident professionals. But the most important thing stays with us: we believe that everyone already has power that makes them want more, aim higher, run faster. Our mission is to help you to get on the road of growth and start a chain of changes. http://netolo.gy/fyb</string>
    <string name="avatar" translatable="false">avatar</string>
    <string name="post_title" translatable="false">post_title</string>
    <string name="post_date" translatable="false">post_date</string>
    <string name="post_menu" translatable="false">post_menu</string>
    <string name="post_barrier" translatable="false">post_barrier</string>
    <string name="post_content" translatable="false">post_content</string>
    <string name="like_checkbox" translatable="false">like_checkbox</string>
    <string name="like_share_button" translatable="false">like_share_button</string>
    <string name="like_share_counter" translatable="false">like_share_counter</string>
    <string name="views" translatable="false">views</string>
    <string name="views_counter" translatable="false">views_counter</string>
    <string name="like_button" translatable="false">like_button</string>
    <string name="like_counter" translatable="false">like_counter</string>
    <string name="edit_text">Edit message</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="empty_post">Empty post!</string>
	<string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="clear">Clear</string>
    <string name="button_save">button_save</string>
    <string name="button_cancel">button_cancel</string>
    <string name="button_edit">button_edit</string>
    <string name="chooser_share_post">Share post</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="video" translatable="false">video</string>
    <string name="button_play" translatable="false">button_play</string>
    <string name="button_check" translatable="false">button_check</string>
    <string name="fab" translatable="false">fab</string>
    <string name="channel_name" translatable="false">channel_name</string>
    <string name="channel_description" translatable="false">channel_description</string>
    <string name="user_liked" translatable="false">"User %1$s liked %2$s's "</string>
    <string name="new_post" translatable="false">User %1$s new post: %2$s</string>
    <string name="unknown" translatable="false">Unknown message</string>
</resources>