<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.MainActivity">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/avatar"
        android:layout_width="@dimen/retreat_48_dp"
        android:layout_height="@dimen/retreat_48_dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/avatar"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/authorName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:contentDescription="@string/post_title"
        android:text="@string/post_name"
        app:layout_constraintBottom_toTopOf="@+id/data"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:contentDescription="@string/post_date"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toEndOf="@id/authorName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/authorName"
        app:layout_constraintTop_toBottomOf="@id/authorName"
        />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/post_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_more_vert_24"
         />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/post_barrier"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar, authorName, data, menu"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autoLink="web"
        android:contentDescription="@string/post_content"
        android:text="@string/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/like_image_button_id"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/retreat_24_dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/icon_like_not_liked"
        android:contentDescription="@string/like_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/like_counter_text_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/like_counter"
        android:paddingStart="5dp"
        app:layout_constraintTop_toTopOf="@+id/like_image_button_id"
        app:layout_constraintBottom_toBottomOf="@+id/like_image_button_id"
        app:layout_constraintStart_toEndOf="@+id/like_image_button_id"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/share_image_button_id"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/retreat_24_dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/icon_share"
        android:contentDescription="@string/like_share_button"
        app:layout_constraintTop_toTopOf="@+id/like_image_button_id"
        app:layout_constraintBottom_toBottomOf="@+id/like_image_button_id"
        app:layout_constraintStart_toEndOf="@+id/like_counter_text_view_id" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/share_counter_text_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/like_share_counter"
        app:layout_constraintTop_toTopOf="@+id/like_image_button_id"
        app:layout_constraintBottom_toBottomOf="@+id/like_image_button_id"
        app:layout_constraintStart_toEndOf="@+id/share_image_button_id" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/watches_image_view_id"
        android:layout_width="@dimen/retreat_24_dp"
        android:layout_height="@dimen/retreat_24_dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/icon_watches"
        android:contentDescription="@string/views"
        app:layout_constraintTop_toTopOf="@+id/like_image_button_id"
        app:layout_constraintBottom_toBottomOf="@+id/like_image_button_id"
        app:layout_constraintEnd_toStartOf="@+id/watches_counter_text_view_id"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/watches_counter_text_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/views_counter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/like_image_button_id"
        app:layout_constraintBottom_toBottomOf="@+id/like_image_button_id"/>

</androidx.constraintlayout.widget.ConstraintLayout>